# rsrand

./: Cargo.toml  README.md  build.rs  cli.yaml
src/: install.ps1  main.rs  uninstall.ps1
