[package]
name = "rsrand"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
clap = { version = "~2.27.0", features = ["yaml"] }
yaml-rust = { version = "0.3.5" }